969-fix: Footer layout issues (#1019)
* fix: footer layout

* fix: remove line break

* refactor: line break classname

* feat: separate column count for rs school and all courses

* fix: increase column count & remove horizontal scrolling & remove unnecessary grid template columns property & remove columns from ul tag

* fix: reduce column count

* fix: footer gap

* fix: change footer gap values

--- a/src/widgets/footer/footer.scss
+++ b/src/widgets/footer/footer.scss
@@ -6,13 +6,13 @@
 
     & .desktop-view {
       display: flex;
-      gap: 76px;
+      gap: 20%;
       align-items: flex-start;
       justify-content: flex-start;
 
       & .left {
         display: flex;
-        gap: 168px;
+        gap: 10vw;
       }
 
       // AboutList component styles
